[tool.poetry]
name = "picha"
version = "0.1.0"
description = "picha picha"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9"
Django = "3.2.8"
celery = "^5.2.6"
redis = "^4.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
